[Gensokyo/Royalflare] Gensokyo striped tables, fix search dark mode

--- a/assets/royalflare/royalflare.css
+++ b/assets/royalflare/royalflare.css
@@ -83,6 +83,9 @@ a.scene {
 .hatate {
     margin-top: 15px;
 }
+.general_header {
+    background-color: #aaaaaa;
+}
 .alcostg th {
     background-color: #c89600;
 }
